--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,21 +14,25 @@
         android:theme="@style/Theme.RecyclerViewDemo"
         tools:targetApi="31">
         <activity
+            android:name=".contacts.ContactInfoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".chatapp.ChatActivity"
+            android:exported="true" />
+        <activity
             android:name=".notes.NotesGridActivity"
+            android:exported="true" />
+        <activity
+            android:name=".contacts.ContactsActivity"
+            android:exported="true" />
+        <activity
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".ContactsActivity"
-            android:exported="true">
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
         </activity>
     </application>
 
